--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -46,6 +46,9 @@
         android:textSize="18sp"
         android:padding="8dp"
         android:layout_margin="16dp"
+        android:focusable="true"
+        android:clickable="true"
+        android:focusableInTouchMode="true"
         />
 
     <TextView
@@ -60,7 +63,7 @@
         />
     <TextView
         android:id="@+id/tv_game_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pick a date"
         android:textSize="18sp"
@@ -73,7 +76,7 @@
 
     <TextView
         android:id="@+id/tv_game_time"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pick a time"
         android:textSize="18sp"
