--- a/app/src/main/res/layout/game_info.xml
+++ b/app/src/main/res/layout/game_info.xml
@@ -17,87 +17,221 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:layout_margin="16dp">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp">
-
-                <TextView
-                    android:id="@+id/et_game_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp"
-                    android:text="Game name: "
-                    android:layout_margin="16dp"
-                    android:textColor="#000000"
-
-                    />
-
-                <TextView
-                    android:id="@+id/et_game_team1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:text="Team 1: "
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/et_game_team2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:text="Team 2: "
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/et_sport_type"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:text="Sport type: "
-                    android:textColor="#000000" />
-
-                <TextView
-                    android:id="@+id/tv_game_date"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:text="Date: "
-                    android:textColor="#000000" />
+                    android:orientation="horizontal"
+                    >
 
-                <TextView
-                    android:id="@+id/tv_game_time"
+                    <TextView
+                        android:id="@+id/tv_game_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Game name: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_name_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="GameName"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:padding="8dp"
-                    android:text="Time: "
-                    android:textColor="#000000" />
+                    android:orientation="horizontal"
+                    >
 
-                <TextView
-                    android:id="@+id/tv_game_location"
-                    android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/tv_game_team1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Team1: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_team1_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Team1"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_add_location_black_24dp"
-                    android:drawablePadding="8dp"
-                    android:padding="8dp"
-                    android:singleLine="true"
-                    android:text="Venue: "
-                    android:textColor="#000000" />
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_game_team2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Team2: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_team2_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Team2"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_game_sport"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Sport: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_game_sport_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Sport"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_game_data"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Date: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_date_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="gameDate"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        android:id="@+id/et_game_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="Time: "
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_game_time_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp"
+                        android:text="gameTime"
+                        android:layout_margin="16dp"
+                        android:textColor="#000000"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_game_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/ic_add_location_black_24dp"
+                        android:drawablePadding="8dp"
+                        android:padding="8dp"
+                        android:singleLine="true"
+                        android:text="Venue: "
+                        android:textColor="#000000" />
+                    <TextView
+                        android:id="@+id/tv_game_location_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="8dp"
+                        android:padding="8dp"
+                        android:singleLine="true"
+                        android:text="GameVenue "
+                        android:textColor="#000000" />
+        </LinearLayout>
+
+
+
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -125,7 +259,6 @@
 
                 </LinearLayout>
 
-            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </ScrollView>
 
