--- a/app/src/main/res/layout/navigation_menu_header.xml
+++ b/app/src/main/res/layout/navigation_menu_header.xml
@@ -9,6 +9,13 @@
     android:gravity="bottom">
 
     <TextView
+        android:id="@+id/tv_nav_header_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+
+        />
+    <TextView
         android:id="@+id/tv_nav_header_player_handle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
