--- a/app/src/main/res/layout/activity_venue_info.xml
+++ b/app/src/main/res/layout/activity_venue_info.xml
@@ -10,46 +10,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Venue Name: "
-        android:padding="8dp"
+        android:padding="15dp"
         />
 
     <TextView
         android:id="@+id/tv_info_venue_manager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Venue manager"
-        android:padding="8dp"
+        android:text="Venue manager: "
+        android:padding="15dp"
         />
 
     <TextView
         android:id="@+id/tv_info_num_grounds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <EditText
-        android:id="@+id/et_info_num_grounds"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Number of grounds: "
+        android:padding="15dp"
+        />
 
     <TextView
         android:id="@+id/tv_info_venue_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Venue location: "
+        android:padding="15dp"
+        />
 
     <TextView
         android:id="@+id/tv_info_venue_opening_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Opening time: "
+        android:padding="15dp"
+        />
 
     <TextView
         android:id="@+id/tv_info_venue_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Venue type: "
+        android:padding="15dp"
+        />
 </LinearLayout>
