--- a/app/src/main/res/layout/activity_venue_info.xml
+++ b/app/src/main/res/layout/activity_venue_info.xml
@@ -46,6 +46,7 @@
         android:id="@+id/et_info_num_grounds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="numberSigned"
 
         />
 
