--- a/app/src/main/res/layout/game_info.xml
+++ b/app/src/main/res/layout/game_info.xml
@@ -38,17 +38,17 @@
 
                         />
 
-                    <TextView
-                        android:id="@+id/tv_game_name_info"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="8dp"
-                        android:paddingTop="8dp"
-                        android:text="GameName"
-                        android:layout_margin="16dp"
-                        android:textColor="#000000"/>
-
                 </LinearLayout>
+            <EditText
+                android:id="@+id/tv_game_name_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:text="GameName"
+                android:textSize="14dp"
+                android:textColor="#000000" />
 
               <LinearLayout
                     android:layout_width="wrap_content"
