--- a/app/src/main/res/layout/game_card.xml
+++ b/app/src/main/res/layout/game_card.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/tv_game_card_dateTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="dateTime"
                 android:textColor="#212121"
                 android:textSize="14sp" />
 
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text=""
+                android:text="Venue"
                 android:textColor="#727272"
                 android:textSize="14sp" />
 
