--- a/app/src/main/res/layout/game_card.xml
+++ b/app/src/main/res/layout/game_card.xml
@@ -28,15 +28,29 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-
             <TextView
                 android:id="@+id/tv_game_card_state"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:text="Approved"
                 android:textColor="#212121"
                 android:textSize="14sp"
-                android:gravity="end"
+
+                />
+
+            <TextView
+                android:id="@+id/tv_game_card_venue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:drawableLeft="@drawable/ic_add_location_black_24dp"
+                android:drawableRight="@drawable/ic_chevron_right_black_24dp"
+                android:gravity="center_horizontal"
+                android:text="Long venue name will go here and might n...."
+                android:textColor="#727272"
+                android:textSize="14sp"
+
                 />
 
 
@@ -44,56 +58,66 @@
                 android:id="@+id/tv_game_card_dateTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
                 android:text="dateTime"
                 android:textColor="#212121"
                 android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/tv_game_card_venue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Venue"
-                android:textColor="#727272"
-                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_game_card_team1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="tttttttttttttttttttt"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
+                <TextView
+                    android:id="@+id/tv_game_card_team1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="tttttttttttttttttttt"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="24sp"
 
-                />
+                    />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="VS"
-                android:textSize="24sp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:textColor="@color/colorPrimaryDark"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:text="VS"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="24sp"
 
-                />
-            <TextView
-                android:id="@+id/tv_game_card_team2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="tttttttttttttttttttt"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
+                    />
 
-                />
+                <TextView
+                    android:id="@+id/tv_game_card_team2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="tttttttttttttttttttt"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="24sp"
+
+                    />
 
 
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_game_card_join"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                />
 
         </LinearLayout>
     </LinearLayout>
