--- a/app/src/main/res/layout/activity_team_info.xml
+++ b/app/src/main/res/layout/activity_team_info.xml
@@ -1,106 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.NestedScrollView
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/info_team_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="Team Name: " />
-
-    <EditText
-        android:id="@+id/et_info_team_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:visibility="gone"
-
-        />
-
-    <TextView
-        android:id="@+id/tv_info_view_team_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-
-        />
-
-
-    <TextView
-        android:id="@+id/tv_info_team_sport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="Team sport: " />
-
-    <Spinner
-        android:id="@+id/spn_info_team_sport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/tv_info_view_team_sport"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-
-
-        />
-
-    <TextView
-        android:id="@+id/tv_info_team_players"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="Players"
-
-        />
-
-        <TextView
-            android:id="@+id/tv_info_team_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="Win/Loss Ratio:" />
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-
-        android:text="Players"
-        />
-
-        <TextView
-            android:id="@+id/tv_info_team_remove_players"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:visibility="gone"
-
-            android:text="remove selected"
-            />
-
-
-    </LinearLayout>
 
 
     <android.support.v7.widget.RecyclerView
@@ -114,6 +24,17 @@
         android:background="@color/colorLightBackground"/>
 
 
+    <Button
+        android:id="@+id/btn_team_info_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Important Team Action"
+        android:padding="16dp"
+        android:textAlignment="center"
+        android:gravity="bottom"/>
+
+
 </LinearLayout>
+
 </android.support.v4.widget.NestedScrollView>
 
